# Forge

./: .dockerignore  .gitignore  Forge.bat  Forge.vbs  GETTING_STARTED.md  LICENSE  README.md  ROADMAP.md  SCENARIOS.md  TELEMETRY.md  batch_dispatch_lists.json  conftest.py  dispatch_batch.py  forge.sh  install.py  pull_batch_results.py  pyproject.toml
.github/: FUNDING.yml
discord-bot/: bot.py  config.py  forge_api.py  run_bot.sh  server_setup.py  start.py  upload_bot.winscp  upload_start.winscp  webhook_sender.php
docs/: forge-protocol-v1.md  phase1_scope.md
forge/: __init__.py  __main__.py  _authored.json  _v4_authored.json  adaptive_pressure.py  ami.py  assurance.py  assurance_report.py  audit.py  autoforge.py  autopilot.py  behavioral_fingerprint.py  benchmark.py  benchmark_report.py  billing.py  break_runner.py  bug_reporter.py  certify_runner.py  commands.py  compliance_gate.py  config.py  constants.py  context.py  continuity.py  crucible.py  dedup.py  digest.py  engine.py  event_bus.py  external_runner_keys.py  file_cache.py  forensics.py  hardware.py  index.py  machine_id.py  memory.py  passport.py  persona.py  plan_verifier.py  planner.py  (+19 more)
runner/: Dockerfile.runner  README.runner.md  VERSION  forge_external_runner.py  requirements.runner.txt
runpod/: Dockerfile  Dockerfile.api  Dockerfile.legacy  Dockerfile.weights  handler.py  judge_subproc.py
scripts/: bisect_failure.py  build_signatures.py  export_audit_bundle.py  issue_fixer.py  my_dashboard.py  nightly.bat  nightly.sh  nightly_smart.py  run_live_stress.py  view_stress_results.py
(+218 files in other folders)
